--- a/AI_Project/AI_Project/AI_Project.csproj
+++ b/AI_Project/AI_Project/AI_Project.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="GradientHistogram.cs" />
     <Compile Include="ImageHelper.cs" />
+    <Compile Include="KNN.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
